syntax = "proto3";

import "google/protobuf/any.proto";

package com.spotify.home.dac.component.v1.proto;

option java_multiple_files = true;
option java_package = "com.spotify.home.dac.component.v1.proto";

message HomePageComponent {
  repeated google.protobuf.Any components = 2;
}

message SectionHeaderComponent {
  string title = 1;
}

message SectionComponent {
  repeated google.protobuf.Any components = 2;
}

message RecsplanationHeadingComponent {
  string title = 1;
  string subtitle = 2;
  string navigateUri = 3;
  string imageUri = 4;
}

// only ubi(soft?!) data here, I guess recents are fetched separately
message RecentlyPlayedSectionComponent {}